--- a/.env.sample
+++ b/.env.sample
@@ -22,3 +22,6 @@ HMAC_KEY={random-string}
 #
 # See: https://docs.rs/env_logger/0.9.0/env_logger/#enabling-logging
 RUST_LOG=realworld_axum_sqlx=debug,tower_http=debug
+
+# Configure the server's port
+PORT=3003
